--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "gulp": "^3.9.1",
         "gulp-sass": "^3.1.0",
         "bourbon": "^4.2.6",
-        "bourbon-neat": "^1.7.2"
+        "bourbon-neat": "^1.7.2",
+        "sass-rem": "^1.2.2"
     }
 }
