--- a/package.json
+++ b/package.json
@@ -16,10 +16,19 @@
     },
     "homepage": "https://github.com/Herm71/genesis-child-theme#readme",
     "devDependencies": {
-        "gulp": "^3.9.1",
-        "gulp-sass": "^3.1.0",
         "bourbon": "^4.2.6",
         "bourbon-neat": "^1.7.2",
+        "css-mqpacker": "^6.0.1",
+        "gulp": "^3.9.1",
+        "gulp-autoprefixer": "^4.0.0",
+        "gulp-cssnano": "^2.1.2",
+        "gulp-notify": "^3.0.0",
+        "gulp-plumber": "^1.1.0",
+        "gulp-postcss": "^7.0.0",
+        "gulp-rename": "^1.2.2",
+        "gulp-sass": "^3.1.0",
+        "gulp-sass-lint": "^1.3.4",
+        "gulp-sourcemaps": "^2.6.1",
         "sass-rem": "^1.2.2"
     }
 }
